varios cambios de prueba

--- a/css/master.css
+++ b/css/master.css
@@ -13,6 +13,9 @@ ul{
 html{
     scroll-behavior: smooth;
 }
+body{
+    background-color: #1F8A70;
+}
 
 /*=== Aplicando CSS al encabezado===*/
 #logo{
@@ -71,8 +74,8 @@ html{
         grid-template-columns: 1fr 2fr 1fr 0.5fr;
         justify-items: center;
         align-items: center;
-        background-color: blue;
-        color: white;
+        background-color: #00425A;
+        color: #FC7300;
     }
     #redesSociales{
         display: grid;
